# http/output/swagger.json
@@ -186,31 +186,7 @@
 				"parameters": [
 					{
 						"in": "query",
-						"name": "name",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "species",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "customerId",
-						"required": false,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"in": "query",
-						"name": "color",
+						"name": "query",
 						"required": false,
 						"schema": {
 							"type": "string"
